--- a/Project1_Book_Suggestor.ipynb
+++ b/Project1_Book_Suggestor.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPgvFAR3HRU5yNVYZjEWaJy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +35,17 @@
       ],
       "metadata": {
         "id": "sc7LfeOTwhlT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_link = \"https://github.com/dcbfoss/MiniProjects/raw/main/project1/data/books_usage_sample.xlsx\""
+      ],
+      "metadata": {
+        "id": "v-l6scZrnQKv"
       },
       "execution_count": null,
       "outputs": []
