--- a/Project1_Book_Suggestor.ipynb
+++ b/Project1_Book_Suggestor.ipynb
@@ -36,29 +36,44 @@
       "metadata": {
         "id": "sc7LfeOTwhlT"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "data_link = \"https://github.com/dcbfoss/MiniProjects/raw/main/project1/data/books_usage_sample.xlsx\""
+        "data_link = \"https://github.com/dcbfoss/MiniProjects/raw/main/project1/data/books_usage_sample.xlsx\"\n",
+        "def readfile(filename, sheetname):\n",
+        "    data=pd.read_excel(filename,sheet_name=[sheetname],header=None)\n",
+        "    return data"
       ],
       "metadata": {
         "id": "v-l6scZrnQKv"
       },
-      "execution_count": null,
+      "execution_count": 48,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def readfile():\n",
-        "  data=pd.read_excel(filename,sheetname=[])\n",
-        "\n"
+        "usernames = []; books = []; booktitles = {}; usage_record = []\n",
+        "data = readfile(data_link, 'names')\n",
+        "usernames = [ i[0].lower() for i in data['names'].values]\n",
+        "usage_record = [[] for i in data['names'].values]\n",
+        "\n",
+        "data = readfile(data_link, 'books')\n",
+        "books = [ i[0] for i in data['books'].values]\n",
+        "for key, value in data['books'].values:\n",
+        "    booktitles[key] = value\n",
+        "\n",
+        "data = readfile(data_link, 'record')\n",
+        "for entry in data['record'].values:\n",
+        "    usage_record[usernames.index(entry[1].lower())].append(books.index(entry[3]))\n",
+        "\n",
+        "print(usage_record)"
       ],
       "metadata": {
-        "id": "qnByFQM7w8r1"
+        "id": "yuXu3j1hL_tk"
       },
       "execution_count": null,
       "outputs": []
