--- a/Project1_Book_Suggestor.ipynb
+++ b/Project1_Book_Suggestor.ipynb
@@ -74,10 +74,10 @@
       ],
       "metadata": {
         "id": "yuXu3j1hL_tk",
-        "outputId": "b54040e9-c6df-490a-a052-332d6df35f93",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b54040e9-c6df-490a-a052-332d6df35f93"
       },
       "execution_count": 55,
       "outputs": [
@@ -94,13 +94,18 @@
       "cell_type": "code",
       "source": [
         "# create sequence\n",
-        "seq1= [i/float(10) for i in range(0,10)] # [0, 0.1, 0.2 ..0.9]\n",
-        "seq2 = [i/float(10) for i in range(1,11)] # [0.1, 0.2 ..0.9, 1.0]"
+        "input_data = []; output_labels = [];RANGE = 5\n",
+        "for user in usage_record:\n",
+        "    for i in range(len(user)):\n",
+        "        subset = user[i:i+RANGE]\n",
+        "        if len(subset)==RANGE:\n",
+        "            input_data.append(subset[0:-1])\n",
+        "            output_labels.append(subset[-1])"
       ],
       "metadata": {
         "id": "yQbBDEEnw2O-"
       },
-      "execution_count": null,
+      "execution_count": 59,
       "outputs": []
     },
     {
