--- a/Project1_Book_Suggestor.ipynb
+++ b/Project1_Book_Suggestor.ipynb
@@ -29,14 +29,15 @@
       "cell_type": "code",
       "source": [
         "from keras.models import Sequential\n",
-        "from keras.layers import Dense, LSTM\n",
+        "from keras.layers import Dense, LSTM, Embedding\n",
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import tensorflow as tf"
       ],
       "metadata": {
         "id": "sc7LfeOTwhlT"
       },
-      "execution_count": 51,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -45,12 +46,21 @@
         "data_link = \"https://github.com/dcbfoss/MiniProjects/raw/main/project1/data/books_usage_sample.xlsx\"\n",
         "def readfile(filename, sheetname):\n",
         "    data=pd.read_excel(filename,sheet_name=[sheetname],header=None)\n",
-        "    return data"
+        "    return data\n",
+        "\n",
+        "def find_max(this_list):\n",
+        "    max_val = 0\n",
+        "    for i in this_list:\n",
+        "        if type(i)==type([]):\n",
+        "            m_val = max(i)\n",
+        "        else:m_val = i\n",
+        "        max_val = max(max_val, m_val)\n",
+        "    return max_val"
       ],
       "metadata": {
         "id": "v-l6scZrnQKv"
       },
-      "execution_count": 52,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -73,22 +83,10 @@
         "print(usage_record)"
       ],
       "metadata": {
-        "id": "yuXu3j1hL_tk",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b54040e9-c6df-490a-a052-332d6df35f93"
+        "id": "yuXu3j1hL_tk"
       },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[879, 843, 353, 448, 535, 638, 636, 450, 821, 822, 341, 637, 672], [875, 64, 23, 300, 326, 948, 561, 619, 583, 954, 765, 55, 317, 338], [146, 79, 174, 259], [493, 149, 28, 361, 951, 835, 841], [908, 178, 692, 25, 30, 116, 954, 40, 51, 885, 319, 112, 121, 746, 535, 740, 554, 765], [871, 215, 230, 298, 395, 539, 520, 919, 496, 38, 105, 124, 156, 541, 616, 714, 916, 681, 873, 28, 695, 22, 431, 910, 482, 746, 696, 690, 28], [889, 100, 448, 632, 399, 526, 409, 451, 750, 21, 93, 408, 430, 490, 567, 286, 557, 591, 131, 320, 606, 421], [484, 355, 412, 78, 771, 873, 26, 28, 29, 90, 144, 199, 217, 223, 303, 108, 427, 463, 512, 480, 586, 664, 695, 944, 92, 881, 146, 202, 240, 172, 225, 247, 248, 268, 86, 513, 358], [42, 101, 822, 525, 626, 236, 231, 785, 906, 539, 521, 529, 800], [524, 273, 119, 298, 219], [203, 524, 494, 481, 624, 484, 954, 745, 890, 43, 465, 533, 667, 872, 917, 258, 542, 570], [131, 165, 238, 280, 337, 256, 451, 523, 612, 434, 769, 508, 286, 60, 434, 566, 799, 818, 819, 148, 428], [767, 296, 408, 555, 555, 42, 259, 503, 733, 296], [278, 305, 191, 200, 259], [504, 68, 187, 951, 102, 102, 674, 766], [122, 123, 12, 91, 497, 585, 724, 323, 921, 7], [413, 913, 47, 48, 49, 75, 99, 107, 115, 157, 171, 364, 366, 398, 411, 521, 609, 605, 642, 648, 288, 934, 931, 936, 940, 707, 75, 99, 157, 364, 366, 398, 411, 521, 825, 745, 813, 364], [167, 830, 235], [712, 911, 11, 62, 959, 961, 475], [31, 32, 160, 308, 943, 222, 892, 584, 721, 31, 194, 323, 200, 35, 104, 454, 18, 313, 925, 804, 277], [739, 7, 644, 817], [760, 761, 113, 621, 798], [74, 134, 136, 414, 492, 530, 932, 56, 283, 787, 787], [54, 515, 577, 578, 754, 756, 770], [868, 0, 487, 198, 336, 563, 708, 709, 537, 629, 941, 126, 138, 342, 531, 647, 623, 810, 958, 309, 322, 497, 581, 777, 854, 856, 77, 137, 212, 374, 449, 645, 466, 861, 859, 863], [441, 498, 626, 130, 668, 10, 871, 9, 155, 607, 686, 10], [298, 597], [337, 158], [665, 790, 875, 354, 74, 134, 136, 492, 367, 312, 314, 513, 195, 19, 185, 344, 210, 598, 715, 275], [907, 620, 763, 363, 634, 353, 311, 323, 318, 419, 773], [935, 214, 636], [912, 161, 253, 533, 930, 469, 64, 304, 88, 711, 385, 826, 384, 377, 108], [403, 376, 184, 500, 182, 547, 633, 638, 625, 812, 824, 220, 242, 243, 328, 522, 217, 387, 473, 644, 743, 748, 799, 813, 857], [54, 207, 84, 105, 331], [823, 68, 230, 369, 193, 317], [129, 127, 643, 867, 213, 378, 404, 311, 880, 612, 757, 347], [377, 438, 381, 464, 497, 688, 691, 117, 878, 361, 864, 895, 903, 915, 733, 45, 351, 646], [196, 299, 52, 106, 63, 58, 697, 901], [629, 56, 425, 162, 343, 703], [56, 886, 928, 960, 172, 951, 832, 844], [87, 293, 272, 158], [333, 897, 924, 34, 46, 150, 348, 293, 467, 550, 552, 579, 459, 662, 939, 673, 674, 678, 684, 693, 685, 697, 700, 706, 716, 717, 718, 722, 723, 782, 784, 587, 357, 789, 793, 794, 796, 791, 792, 66, 332, 896, 380, 478, 514, 801, 15, 190, 287, 288, 291, 450, 624, 603, 610, 937, 942, 957, 805, 807, 808, 811, 284, 29, 177, 829, 827, 836, 837, 891, 838, 840, 876, 877, 898, 96, 98, 842, 143, 592, 679, 795, 845, 846, 41, 73, 82, 168, 279, 111, 780, 94, 166, 261, 562, 653, 650, 679, 766, 802, 803, 673, 690, 847, 848, 849, 850, 852, 853, 855, 2, 224, 405, 865], [362, 701], [120, 947, 386, 630, 643, 682, 735, 770], [920, 251, 89, 394, 255, 453, 549, 567, 950, 714, 195, 753, 95], [355, 65, 189, 296, 561, 153, 266, 139, 806, 79, 559, 929, 186, 918, 27, 402, 873, 67, 734, 899, 306, 440, 271, 728, 858], [163, 328, 338, 422, 170, 511, 83, 326, 775, 39, 268, 271, 816, 504, 776, 135], [518, 895, 6, 298, 462, 797, 565], [3, 307, 307], [147, 255, 339, 352, 452, 528, 724, 820, 207, 164, 764], [670, 230, 438, 395, 639, 226], [380, 447, 514, 525, 536, 624, 352, 447, 582, 958, 338, 958], [3, 241, 277, 491, 680], [575, 416, 926, 927, 488, 823, 525, 534, 485, 548, 839, 902], [963, 965], [851, 882, 888, 522, 532, 490, 263, 744, 752, 176, 757, 730, 900, 918, 329, 500, 742, 50, 300, 257, 741, 24, 350, 301, 372, 746, 29, 457, 103, 958], [409], [164, 178, 619, 16, 300], [246, 338], [866, 145, 231, 382, 439, 628, 705, 703, 704, 436, 955, 239, 236, 234, 146, 427, 413, 47, 48, 495, 486, 166, 703, 704, 360], [634], [221, 731, 615, 880, 614, 445, 810, 842, 218, 470, 515], [139, 162, 573, 572, 663, 746, 747, 755, 772, 273, 622, 952, 751, 666, 740, 220, 26, 237, 762, 81, 223, 386, 627, 403, 743, 217, 621, 728, 375, 379, 759, 762, 327, 615, 813, 814, 37, 519, 918, 361, 785, 515, 500, 517, 103], [346, 489, 163, 188, 762, 786, 502, 815], [527, 117, 883, 726, 887, 16, 207, 8, 208, 148, 229, 264, 324, 396, 407, 429, 417, 446, 473, 501, 540, 623, 683, 706, 44, 749, 758, 762, 179, 254, 860], [53, 158, 310, 330, 114, 574, 687, 403, 4, 389, 725, 748, 359, 375, 585, 422, 689, 569, 482, 20, 5, 71, 180, 252, 3, 545, 207, 727, 391, 406, 211, 617, 576, 403, 543, 551, 553, 702, 666, 694, 286, 810, 109, 613], [468, 676, 289, 290, 736, 737], [359, 13], [962, 785], [294, 142, 553, 300, 142, 585, 422, 226, 522, 953, 538, 653], [309, 581], [461, 113, 509, 692], [164, 399, 525, 657, 84, 251, 430, 666, 635, 434], [423, 363, 260, 415, 651, 1, 60, 104, 118, 133, 201, 227, 228, 272, 281, 933, 345, 371, 390, 433, 949, 474], [894], [909, 125, 757, 53, 297], [409, 951, 757], [690, 966], [872, 192, 945, 97, 634, 110, 216, 686, 218, 353, 400, 956, 747, 320, 580, 768, 249, 460, 607, 604, 608, 72, 588, 717, 719, 720], [456, 472, 443, 560, 458, 33, 440, 368, 182, 44, 874, 893, 904, 914, 7, 57, 141, 154, 206, 262, 267, 269, 270, 282, 295, 335, 349, 365, 393, 424, 392, 383, 388, 442, 420, 471, 476, 505, 516, 654, 698, 729, 732, 373, 786, 244, 245, 469, 475, 774, 276, 461, 69, 128, 455, 426, 508, 7, 905, 923, 831, 746, 117, 410, 418, 788, 922, 266, 361], [132, 637, 713], [444, 571, 631], [80, 299, 590, 151, 250, 401, 196, 759, 7, 12, 238, 512, 614, 710, 544, 376, 321, 697, 323, 322, 658, 173, 17, 316, 783, 152, 334, 46], [359, 884, 165, 781, 787], [328, 274, 809, 640, 828, 612], [564, 204, 233, 435, 649, 183, 36, 181, 205, 479, 506, 507, 499, 437, 555, 556, 558, 618, 611, 602, 601, 600, 595, 596, 599, 593, 652, 671, 669, 370, 660, 659, 677, 833, 834, 958], [61, 209, 724, 964, 3, 325], [862, 380, 302, 477, 246], [397, 629, 675, 745, 938, 511, 409, 340, 522], [432, 699, 738], [946, 879, 159, 562, 778, 232, 870, 85, 639, 641, 169, 315, 656], [869, 197, 869, 197, 70, 14, 285, 59, 59, 589, 661, 779], [356, 480, 549, 546, 76, 140, 613, 265, 182, 322, 403, 478, 807, 483, 292], [50, 594, 640, 105, 331, 138, 297, 175, 510, 655, 387, 568, 598, 105, 131, 394, 256, 241]]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -100,45 +98,116 @@
         "        subset = user[i:i+RANGE]\n",
         "        if len(subset)==RANGE:\n",
         "            input_data.append(subset[0:-1])\n",
-        "            output_labels.append(subset[-1])"
+        "            output_labels.append(subset[-1])\n",
+        "X=np.array(input_data); Y=np.array(output_labels)\n",
+        "\n",
+        "max_embed = find_max(input_data)\n",
+        "max_embed = max(max_embed, find_max(output_labels))\n",
+        "print(max_embed)"
       ],
       "metadata": {
-        "id": "yQbBDEEnw2O-"
+        "id": "yQbBDEEnw2O-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cb5cf8bd-3431-405c-b0d2-a5d4ed5b6ed2"
       },
-      "execution_count": 59,
-      "outputs": []
+      "execution_count": 108,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "964\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Reformat to X and Y\n",
-        "X=np.array(seq1); Y=np.array(seq2)\n",
-        "X=X.reshape(10,1);Y=Y.reshape(10,1)\n",
-        "\n",
-        "model = tf.keras.Sequential([\n",
-        "  tf.keras.layers.Embedding(len(chars), 256, input_length=4),\n",
-        "  tf.keras.layers.LSTM(256),\n",
-        "  tf.keras.layers.Dense(len(chars), activation='softmax')])\n",
-        "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')\n",
-        "model.fit(x, y, batch_size=128, epochs=500)\n",
-        "loss = model.evaluate(X, Y, verbose=0)"
+        "model = Sequential([\n",
+        "    Embedding(max_embed+1, 256, input_length=4),\n",
+        "    LSTM(256),\n",
+        "    Dense(max_embed+1, activation='softmax')])\n",
+        "model.compile(loss='sparse_categorical_crossentropy', optimizer='adam')"
       ],
       "metadata": {
         "id": "6y32syF2w4RW"
       },
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(model.predict(X, verbose=0))"
+        "model.fit(X, Y, batch_size=100, epochs=10)\n",
+        "loss = model.evaluate(X, Y, verbose=0)"
       ],
       "metadata": {
-        "id": "QopnTiyUw7C2"
+        "id": "Ca4HKh1skv77",
+        "outputId": "3d76786f-60be-43d0-98b0-f78694c968fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "10/10 [==============================] - 4s 97ms/step - loss: 6.8733\n",
+            "Epoch 2/10\n",
+            "10/10 [==============================] - 1s 61ms/step - loss: 6.8527\n",
+            "Epoch 3/10\n",
+            "10/10 [==============================] - 1s 64ms/step - loss: 6.8293\n",
+            "Epoch 4/10\n",
+            "10/10 [==============================] - 1s 61ms/step - loss: 6.7828\n",
+            "Epoch 5/10\n",
+            "10/10 [==============================] - 1s 65ms/step - loss: 6.6403\n",
+            "Epoch 6/10\n",
+            "10/10 [==============================] - 1s 66ms/step - loss: 6.4528\n",
+            "Epoch 7/10\n",
+            "10/10 [==============================] - 1s 75ms/step - loss: 6.2184\n",
+            "Epoch 8/10\n",
+            "10/10 [==============================] - 1s 63ms/step - loss: 5.9730\n",
+            "Epoch 9/10\n",
+            "10/10 [==============================] - 1s 63ms/step - loss: 5.5955\n",
+            "Epoch 10/10\n",
+            "10/10 [==============================] - 1s 62ms/step - loss: 4.9939\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "seed = [879, 843, 353, 448]\n",
+        "x = np.array(seed)\n",
+        "x = np.reshape(x, (1,4))\n",
+        "index = (np.argmax(model.predict(x, verbose=0)))\n",
+        "bookname  = booktitles[books[index]]\n",
+        "print(index, bookname)"
+      ],
+      "metadata": {
+        "id": "QopnTiyUw7C2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3dab5df6-db6a-468b-f5fc-c8ec17fbe463"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "535 Ashithayude Kathakal\n"
+          ]
+        }
+      ]
     }
   ]
 }
