--- a/Project1_Book_Suggestor.ipynb
+++ b/Project1_Book_Suggestor.ipynb
@@ -145,11 +145,11 @@
         "loss = model.evaluate(X, Y, verbose=0)"
       ],
       "metadata": {
-        "id": "Ca4HKh1skv77",
-        "outputId": "3d76786f-60be-43d0-98b0-f78694c968fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ca4HKh1skv77",
+        "outputId": "3d76786f-60be-43d0-98b0-f78694c968fa"
       },
       "execution_count": 110,
       "outputs": [
@@ -184,27 +184,40 @@
     {
       "cell_type": "code",
       "source": [
-        "seed = [879, 843, 353, 448]\n",
-        "x = np.array(seed)\n",
-        "x = np.reshape(x, (1,4))\n",
-        "index = (np.argmax(model.predict(x, verbose=0)))\n",
-        "bookname  = booktitles[books[index]]\n",
-        "print(index, bookname)"
+        "def predict_book(seed):\n",
+        "    x = np.array(seed)\n",
+        "    x = np.reshape(x, (1,4))\n",
+        "    index = (np.argmax(model.predict(x, verbose=0)))\n",
+        "    bookname  = booktitles[books[index]]\n",
+        "    return (index, books[index], bookname)"
       ],
       "metadata": {
-        "id": "QopnTiyUw7C2",
+        "id": "QopnTiyUw7C2"
+      },
+      "execution_count": 122,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_books = [\"DCB4283\",\"DCB2291\",\"DCB3180\",\"DCB3317\"]\n",
+        "seed = [books.index(i) for i in test_books]\n",
+        "print(predict_book(seed))"
+      ],
+      "metadata": {
+        "id": "3dk4bTgsz4m9",
+        "outputId": "0f129ce2-d268-4329-b7bf-c0b6e7caf83b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "3dab5df6-db6a-468b-f5fc-c8ec17fbe463"
+        }
       },
-      "execution_count": 118,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "535 Ashithayude Kathakal\n"
+            "(958, 'DCBG-0301', 'ലൈഫ്ബോയ് ')\n"
           ]
         }
       ]
